[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Level/LevelControl.gd" type="Script" id=2]
[ext_resource path="res://Script/LevelSelect.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="LevelControl" type="Node"]
script = ExtResource( 2 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -281.0
margin_top = -39.0
margin_right = 281.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Guess The Word"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -134.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="SelectedLevel1" type="Button" parent="." groups=["levelselect"]]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
script = ExtResource( 3 )
level = 1

[node name="SelectedLevel2" type="Button" parent="." groups=["levelselect"]]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
script = ExtResource( 3 )
level = 2

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
